# Kick-Viewerbot

./: .gitignore  CHAT_FEATURE.md  KickViewerBOT-macOS.spec  KickViewerBOT.spec  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  shared_config.py  test_chat_bot.py  test_transformers_direct.py
.github/workflows/: python-package.yml
backend/: main.py
backend/api/: __init__.py  viewer_bot.py  viewer_bot_stability.py
backend/services/: __init__.py  chat_service.py  kick_chat_bot.py
backend/static/: 404.html  index.html  index.txt  login.html  login.txt  register.html  register.txt
frontend/: .dockerignore  .gitignore  dockerfile  eslint.config.mjs  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/: ApiHealthProvider.tsx  AppLoader.tsx  BotInstance.tsx  ControlButtons.tsx  LocalServiceStatus.tsx  ModernLoader.tsx  MotionCard.tsx  PatreonLinkButton.tsx  PatreonLoginButton.tsx  SplineWithLoader.tsx  StatCard.tsx  StatusBanner.tsx  SystemMetrics.tsx  ThemeProvider.tsx  UpdateNotification.tsx  UpdateProvider.tsx  UpdateToast.tsx  ViewerStatCard.tsx  WebSocketStatus.tsx
frontend/config/: ports.ts  site.ts
frontend/contexts/: LocalServiceContext.tsx
frontend/hooks/: useUpdateChecker.ts  useViewerCount.ts  useWebSocketBot.ts
frontend/services/: LocalServiceConnector.ts  (+1 more)
hooks/: hook-fake_useragent.py  hook-tls_client.py  runtime-hook-fake_useragent.py
src/: install.bat  main.py  main_just_terminal.py  requirements.txt  viewer_bot.py
(+47 files in other folders)
