[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KickViewerBOT"
version = "2.3"
description = "Kick Bot for making fake viewers on your live"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core Web Framework
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "werkzeug>=2.0.0",
    "gevent>=23.9.1",
    
    # Network and Streaming
    "requests[socks]>=2.28.0",
    "streamlink>=7.1.3",
    "fake-useragent>=1.1.1",
    "websockets>=12.0",
    "tls_client",
    
    # Security
    # UI and Formatting
    "rich>=13.0.0",

    # Monitoring
    "psutil>=7.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-flask>=1.2.0"
]

dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
kickbot = "backend.main:main"
